tests/webpack-cli-test/configtest/with-config-path/error.config.js
module.exports = {
  mode: "dev", // error
  target: "node",
  stats: "normal",
};
